# satoshi-suite

./: .gitignore  Cargo.toml  Cross.toml  README.md  install.sh  justfile  test.yaml
.cargo/: config.toml
.github/workflows/: release.yml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/ordinals/: Cargo.toml
crates/ordinals/src/: lib.rs
crates/ordinals/src/utils/: constants.rs  mod.rs  push_bytes.rs
crates/signing/: Cargo.toml
crates/signing/src/: lib.rs
crates/utxo-selection/: Cargo.toml
crates/utxo-selection/src/: lib.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: address_utils.rs  builder.rs  lib.rs  multisig_wallet.rs  taproot.rs  wallet.rs
scripts/: build_bitcoincore_and_ord.sh
