[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.81"
license = "MIT"

[workspace]
members = [
    "bin/satoshi-suite/",
    "crates/client/",
    "crates/config/",
    "crates/ordinals",
    "crates/signing/",
    "crates/utxo-selection/",
    "crates/wallet/",
]
default-members = ["bin/satoshi-suite"]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.dependencies]
satoshi-suite-client = { path = "crates/client" }
satoshi-suite-config = { path = "crates/config" }
satoshi-suite-ordinals = { path = "crates/ordinals" }
satoshi-suite-signing = { path = "crates/signing" }
satoshi-suite-utxo-selection = { path = "crates/utxo-selection" }
satoshi-suite-wallet = { path = "crates/wallet" }

bitcoin = { version = "0.31.1", features = ["bitcoinconsensus", "rand-std"] }
bitcoincore-rpc = "0.18.0"
ciborium = "0.2"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.10.0"
hex = "0.4"
openssl = { version = "*", features = ["vendored"] }
ord = "0.21.0"
ordinals = "0.0.11"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
