[package]
name = "satoshi-suite-ordinals"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
ciborium.workspace = true
ord.workspace = true
serde.workspace = true
serde_json.workspace = true