[package]
name = "satoshi-suite-wallet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
satoshi-suite-client.workspace = true
satoshi-suite-config.workspace = true
satoshi-suite-ordinals.workspace = true
# satoshi-suite-runes.workspace = true
satoshi-suite-utxo-selection.workspace = true

bitcoin.workspace = true
bitcoincore-rpc.workspace = true
hex.workspace = true
log.workspace = true
ord.workspace = true
ordinals.workspace = true
serde.workspace = true
serde_json.workspace = true
